# rust-scanner

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  REFACTOR_PLAN 2.md  action.yml
.github/workflows/: ci.yml  release.yml  scanrook-action-smoke.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/benchmarks/: README.md
docs/distribution/: package-managers.md
docs/guides/: github-actions.md
docs/marketing/: launch-blog-draft.md  launch-pack.md
docs/plans/: 2026-03-05-binary-cpe-investigation.md  2026-03-06-m7-memory-optimization-design.md  2026-03-06-m7-refactor-notes.md  2026-03-07-m7-implementation-plan.md  2026-03-08-deploy-fix-verify-design.md  m7-handoff-session1.md  m7-handoff-session2.md  m7-handoff-session3.md  m7-handoff-session4.md
rules/: default.yar
scripts/: benchmark-compare.sh  install-scanrook.sh
src/: archive.rs  binary.rs  cache.rs  container.rs  iso.rs  k8s.rs  license.rs  main.rs  plan.rs  progress.rs  redhat.rs  report.rs  sbom.rs  usercli.rs  utils.rs  vuln.rs  vulndb.rs
src/archive/: detect.rs  dmg.rs  mod.rs  parsers.rs  scan.rs  tests.rs
src/cli/: benchmark.rs  db.rs  detect.rs  diff.rs  helpers.rs  mod.rs  sbom_cmd.rs  text_report.rs  upgrade.rs
src/container/: apk.rs  cli.rs  detect.rs  dpkg.rs  ecosystem.rs  enrich.rs  extract.rs  image.rs  mod.rs  rpm.rs  scan.rs  source.rs
src/iso/: comps.rs  extract.rs  (+7 more)
(+93 files in other folders)
