[package]
name = "scanner"
version = "1.6.4"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
xmltree = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
urlencoding = "2.1"
goblin = "0.7"
memmap2 = "0.9"
tempfile = "3.10"
anyhow = "1.0"
walkdir = "2.5"
bzip2 = "0.4"
# YARA requires libyara installed on the system; keep optional
yara = { version = "0.21", optional = true }
chrono = { version = "0.4", features = ["clock", "std"] }
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"] }
rayon = "1.10"
rand = "0.8"
cvss = "2.2"
redis = "0.27"
serde_yaml = "0.9.34"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "8.1"

[features]
default = []
yara = ["dep:yara"]
